fix scrollbar for microsoft edge

--- a/src/routes/styles/Checkout.css
+++ b/src/routes/styles/Checkout.css
@@ -49,7 +49,7 @@
   border-bottom: 3px solid var(--tertiary-color);
   flex-direction: column;
   gap: 1rem;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 0 1rem;
 }
 
